--- a/build.gradle
+++ b/build.gradle
@@ -6,8 +6,8 @@ buildscript {
 		"versionName": "1.0",
 
 		"minSdk"     : 21,
-		"compileSdk" : 32,
-		"targetSdk"  : 32,
+		"compileSdk" : 33,
+		"targetSdk"  : 33,
 	]
 
 	ext.versions = [
@@ -21,17 +21,20 @@ buildscript {
 		"inject"          : "1",
 		"coroutines"      : "1.6.2",
 		"sendbird"        : "3.1.15",
+		"onesignal"       : "[4.0.0, 4.99.99]",
+		"onesignalPlugin" : "[0.12.10, 0.99.99]",
 
 		// UI
-		"compose"         : '1.2.0-beta03',
+		"compose"         : '1.2.1',
 		"composeActivity" : '1.5.0',
-		"material"        : "1.0.0-alpha12",
-		"material2"       : "1.2.0-beta03",
-		"navigation"      : "2.4.2",
+		"composeCompiler" : '1.3.0',
+		"material2"       : "1.3.0-alpha03",
+		"material3"       : "1.0.0-alpha16",
+		"navigation"      : "2.5.1",
 		"hiltNavigation"  : "1.0.0",
-		"lifecycle"       : "2.5.0-rc01",
-		"splashscreen"    : "1.0.0-rc01",
-		"constraintlayout": "1.1.0-alpha02",
+		"lifecycle"       : "2.6.0-alpha01",
+		"splashscreen"    : "1.0.0",
+		"constraintlayout": "1.1.0-alpha03",
 		"coil"            : '2.1.0',
 		"pager"           : "0.24.12-rc",
 		"imagePicker"     : "2.1",
@@ -70,12 +73,13 @@ buildscript {
 		classpath "org.jetbrains.kotlin:kotlin-serialization:${versions.kotlin}"
 		classpath "com.google.gms:google-services:${versions.googleService}"
 		classpath "com.google.firebase:firebase-crashlytics-gradle:${versions.crashlytics}"
+		classpath "gradle.plugin.com.onesignal:onesignal-gradle-plugin:${versions.onesignalPlugin}"
 	}
 }
 
 plugins {
-	id 'com.android.application' version '7.2.0' apply false
-	id 'com.android.library' version '7.2.0' apply false
+	id 'com.android.application' version '7.2.2' apply false
+	id 'com.android.library' version '7.2.2' apply false
 	id 'org.jetbrains.kotlin.android' version '1.6.21' apply false
 	id 'com.diffplug.spotless' version '6.6.1'
 	id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
