--- a/module.gradle
+++ b/module.gradle
@@ -18,7 +18,7 @@ android {
 	}
 
 	composeOptions {
-		kotlinCompilerExtensionVersion versions.compose
+		kotlinCompilerExtensionVersion versions.composeCompiler
 	}
 	compileOptions {
 		sourceCompatibility versions.java
