Authentication Screens and APIs

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -25,7 +25,7 @@ android {
 			useSupportLibrary true
 		}
 
-		manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "https"]
+		manifestPlaceholders = [auth0Domain: "@string/com_auth0_domain", auth0Scheme: "$applicationId"]
 	}
 
 	buildTypes {
