--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -20,6 +20,7 @@ dependencies {
 	api "androidx.compose.material:material:${versions.material2}" // For material3 availability
 	api "androidx.compose.material3:material3:${versions.material3}"
 	api "androidx.compose.material3:material3-window-size-class:${versions.material3}"
+	api "androidx.compose.material:material-icons-extended:${versions.compose}"
 	api "androidx.compose.foundation:foundation:${versions.compose}"
 	api "androidx.compose.ui:ui-tooling-preview:${versions.compose}"
 	api "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}"
