--- a/app/build.gradle
+++ b/app/build.gradle
@@ -63,6 +63,7 @@ android {
 
 dependencies {
 	implementation project(":ui")
+	implementation project(":navigation")
 	implementation project(":common")
 	implementation project(":models")
 	implementation project(":data")
