Updated NavDestination structure to include arguments and deeplinks

--- a/navigation/build.gradle
+++ b/navigation/build.gradle
@@ -5,3 +5,10 @@ plugins {
 }
 
 apply from: "../module.gradle"
+
+dependencies {
+	implementation project(":common")
+
+	// UI
+	implementation "androidx.navigation:navigation-compose:${versions.navigation}"
+}
