--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -17,6 +17,7 @@ dependencies {
 
 	// UI
 	api "androidx.compose.ui:ui:${versions.compose}"
+	api "androidx.compose.material:material:${versions.material2}" // For material3 availability
 	api "androidx.compose.material3:material3:${versions.material3}"
 	api "androidx.compose.material3:material3-window-size-class:${versions.material3}"
 	api "androidx.compose.foundation:foundation:${versions.compose}"
