Crash fix and added alerts in Network

--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -24,6 +24,7 @@ dependencies {
 	api "androidx.compose.ui:ui-tooling-preview:${versions.compose}"
 	api "androidx.lifecycle:lifecycle-runtime-ktx:${versions.lifecycle}"
 	api "androidx.lifecycle:lifecycle-viewmodel-compose:${versions.lifecycle}"
+	api "androidx.lifecycle:lifecycle-runtime-compose:${versions.lifecycle}"
 	api "androidx.navigation:navigation-compose:${versions.navigation}"
 	api "androidx.hilt:hilt-navigation-compose:${versions.hiltNavigation}"
 	api "androidx.constraintlayout:constraintlayout-compose:${versions.constraintlayout}"
