--- a/feature-channels/build.gradle
+++ b/feature-channels/build.gradle
@@ -7,6 +7,8 @@ plugins {
 apply from: '../feature_module.gradle'
 
 dependencies {
+	implementation project(":feature-people")
+
 	// Data
 	implementation "androidx.paging:paging-compose:${versions.pagingCompose}"
 }
