--- a/feature-people/src/main/AndroidManifest.xml
+++ b/feature-people/src/main/AndroidManifest.xml
@@ -1,5 +1,4 @@
 <?xml version="1.0" encoding="utf-8"?>
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.zero.android.feature.people">
+<manifest package="com.zero.android.feature.people">
 
 </manifest>
