--- a/build.gradle
+++ b/build.gradle
@@ -29,7 +29,7 @@ buildscript {
 		"composeActivity" : '1.5.0',
 		"composeCompiler" : '1.3.0',
 		"material2"       : "1.3.0-alpha03",
-		"material3"       : "1.0.0-alpha16",
+		"material3"       : "1.0.0-beta02",
 		"navigation"      : "2.5.1",
 		"navigationAnim"  : "0.26.2-beta",
 		"hiltNavigation"  : "1.0.0",
@@ -39,6 +39,7 @@ buildscript {
 		"coil"            : '2.1.0',
 		"pager"           : "0.24.12-rc",
 		"imagePicker"     : "2.1",
+		"videoPlayer"     : "0.1.0-alpha",
 
 		// Data
 		"retrofit"        : "2.9.0",
