Fixed image loading bug & improved di visibility of implementation classes

--- a/data/build.gradle
+++ b/data/build.gradle
@@ -21,4 +21,5 @@ dependencies {
 
 	// Data
 	implementation "androidx.paging:paging-compose:${versions.pagingCompose}"
+	implementation "io.coil-kt:coil-compose:${versions.coil}"
 }
