--- a/build.gradle
+++ b/build.gradle
@@ -25,11 +25,11 @@ buildscript {
 		"onesignalPlugin" : "[0.12.10, 0.99.99]",
 
 		// UI
-		"compose"         : '1.2.1',
+		"compose"         : '1.3.0-beta03',
 		"composeActivity" : '1.5.0',
-		"composeCompiler" : '1.3.0',
-		"material2"       : "1.3.0-alpha03",
-		"material3"       : "1.0.0-beta02",
+		"composeCompiler" : '1.3.1',
+		"material2"       : "1.3.0-beta03",
+		"material3"       : "1.0.0-beta03",
 		"navigation"      : "2.5.1",
 		"navigationAnim"  : "0.26.2-beta",
 		"hiltNavigation"  : "1.0.0",
@@ -81,8 +81,8 @@ buildscript {
 }
 
 plugins {
-	id 'com.android.application' version '7.2.2' apply false
-	id 'com.android.library' version '7.2.2' apply false
+	id 'com.android.application' version '7.3.0' apply false
+	id 'com.android.library' version '7.3.0' apply false
 	id 'org.jetbrains.kotlin.android' version '1.7.10' apply false
 	id 'com.diffplug.spotless' version '6.6.1'
 	id 'org.jetbrains.kotlin.jvm' version '1.6.21' apply false
