--- a/ui/build.gradle
+++ b/ui/build.gradle
@@ -36,7 +36,7 @@ dependencies {
 	api "androidx.constraintlayout:constraintlayout-compose:${versions.constraintlayout}"
 	api "com.google.accompanist:accompanist-pager:${versions.pager}"
 	api "io.coil-kt:coil-compose:${versions.coil}"
-	api "com.github.dhaval2404:imagepicker:${versions.imagePicker}"
+	implementation "com.github.dhaval2404:imagepicker:${versions.imagePicker}"
 	api "com.github.imherrera:compose-video-player:${versions.videoPlayer}"
 	debugApi "androidx.compose.ui:ui-tooling:${versions.compose}"
 }
