--- a/common/build.gradle
+++ b/common/build.gradle
@@ -9,4 +9,8 @@ apply from: '../module.gradle'
 dependencies {
 	implementation "androidx.core:core-ktx:${versions.coreKtx}"
 	implementation "org.jetbrains.kotlinx:kotlinx-coroutines-core:${versions.coroutines}"
+
+	// UI
+	implementation "androidx.compose.ui:ui:${versions.compose}"
+	implementation "androidx.lifecycle:lifecycle-viewmodel-compose:${versions.lifecycle}"
 }
